--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ ul {
   margin: 0 15px;
 }
 
+.encabezado__icono {
+  display: none;
+}
+
 /* footer */
 
 .pie-pagina{
@@ -361,6 +365,170 @@ padding-left: 5px;
   transform: scale(1.2);
 }
 
+/* responsive */
 
+@media (max-width: 1880px) {
+  /* pie pagina */
+
+  .pie-pagina {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
+}
+
+/*cuando es menos de 1373, pasa esto*/
+
+@media (max-width: 1373px) {
+  /* sobre mi*/
+
+  .sobremi__dato {
+    word-wrap: break-word;
+    height: 700px;
+  }
+
+  /* pie pagina */
+
+  .pie-pagina {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  /* cv */
+
+  .proyectos {
+    margin: 0px;
+    width: 100vw;
+    height: 100vh;
+    overflow: auto;
+  }
+}
+
+@media (max-width: 1200px) {
+  /* cv */
+
+  .proyectos__contenido {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .proyecto__encabezado {
+    margin-left: 50px;
+  }
+
+  /* sobre mi*/
+
+  .sobremi__dato {
+    overflow: scroll;
+  }
+  
+  /* habilidades */
+
+  .habilidades__encabezado-imagen{
+    display: none;
+  }
+
+}
+
+@media (max-width: 992px) {
+  /* sobre mi*/
+
+  .sobremi {
+    grid-template-columns: 1fr;
+  }
+
+  .sobremi__dato {
+    word-wrap: break-word;
+    height: 475px;
+  }
+
+  /* habilidades */
+
+  .habilidades__contenido{
+    grid-template-columns: 1fr;
+  }
+
+  .habilidades__contenido-dato{
+    height: 250px;
+  }
+}
+
+@media (max-width: 768px) {
+  /* sobre mi*/
+
+  .sobremi__dato {
+    word-wrap: break-word;
+    height: 600px;
+  }
+
+  /* encabezado */
+
+  .encabezado__contenido-menu {
+    display: none;
+  }
+  .encabezado__icono {
+    display: block;
+    font-size: 30px;
+  }
+  /* cv */
+  .proyectos__contenido {
+    grid-template-columns: 1fr;
+  }
+
+  .proyecto__encabezado:hover {
+    transform: none;
+  }
+
+  .proyecto__encabezado-imagen {
+    display: block;
+    margin: auto;
+  }
+}
+
+@media (max-width: 576px) {
+  /* sobre mi*/
+
+  .sobremi__dato {
+    word-wrap: break-word;
+    height: 100%;
+  }
+  .sobremi__imagen {
+    display: none;
+  }
+
+  /* pie pagina*/
+
+  .pie-pagina__dato__derechos {
+    display: none;
+  }
+
+  .pie-pagina__dato {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  /* cv */
+
+  .proyecto__encabezado-imagen {
+    display: none;
+  }
+  .proyecto__descripcion {
+    overflow: scroll;
+  }
+
+  /* habilidades */
+
+  .habilidades__contenido-dato{
+    width: 80%;
+  }
+}
 
 
