--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ ul {
   font-style: normal;
 }
 
-/* comunes */
+/* encabezado */
 
 .encabezado {
   background-color: black;
@@ -74,6 +74,10 @@ ul {
 
 .encabezado__icono {
   display: none;
+} 
+
+.encabezado__responsive{
+  display:none;
 }
 
 /* footer */
@@ -186,7 +190,6 @@ ul {
 }
 
 .contacto__text-holder {
-  width: 100%;
   padding: 10px;
   border: 1px solid rgb(16, 15, 15);
   border-radius: 4px;
@@ -200,7 +203,7 @@ ul {
   padding: 40px;
   padding-left: 70px;
   padding-right: 70px;
-  height: 475px;
+  height: 500px;
   margin: 30px;
   margin-right: 30px;
   margin-bottom: 70px;
@@ -444,6 +447,10 @@ padding-left: 5px;
     height: 475px;
   }
 
+  .sobremi__imagen {
+    display: none;
+  }
+
   /* habilidades */
 
   .habilidades__contenido{
@@ -453,6 +460,14 @@ padding-left: 5px;
   .habilidades__contenido-dato{
     height: 250px;
   }
+
+    /* cv */
+
+  .proyectos__contenido {
+    grid-template-columns: 1fr;
+    width: 40%;
+  }
+  
 }
 
 @media (max-width: 768px) {
@@ -468,14 +483,11 @@ padding-left: 5px;
   .encabezado__contenido-menu {
     display: none;
   }
-  .encabezado__icono {
+  .encabezado__responsive {
     display: block;
-    font-size: 30px;
+    color: #e2e8f0;
   }
   /* cv */
-  .proyectos__contenido {
-    grid-template-columns: 1fr;
-  }
 
   .proyecto__encabezado:hover {
     transform: none;
@@ -485,6 +497,9 @@ padding-left: 5px;
     display: block;
     margin: auto;
   }
+  .proyecto__encabezado-imagen {
+    display: none;
+  }
 }
 
 @media (max-width: 576px) {
@@ -493,9 +508,6 @@ padding-left: 5px;
   .sobremi__dato {
     word-wrap: break-word;
     height: 100%;
-  }
-  .sobremi__imagen {
-    display: none;
   }
 
   /* pie pagina*/
@@ -517,12 +529,7 @@ padding-left: 5px;
 
   /* cv */
 
-  .proyecto__encabezado-imagen {
-    display: none;
-  }
-  .proyecto__descripcion {
-    overflow: scroll;
-  }
+ 
 
   /* habilidades */
 
