--- a/css/style.css
+++ b/css/style.css
@@ -1,296 +1,3 @@
-/* index */
-.cover {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  margin: 0px;
-  font-family: "Raleway";
-  text-align: center; }
-
-.cover__nombre {
-  font-size: 5rem; }
-
-.cover__ocupacion {
-  font-size: 3rem; }
-
-.background-video {
-  object-fit: cover;
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  opacity: 0.8; }
-
-/* sobre mi */
-.sobremi__body {
-  background-color: #012e2e; }
-
-.sobremi {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 40px; }
-
-.sobremi__dato {
-  background-color: #a09eb4;
-  width: 70%;
-  padding: 40px;
-  padding-left: 70px;
-  padding-right: 70px;
-  height: 475px;
-  margin: 30px;
-  background-color: #a09eb4;
-  line-height: 2; }
-
-.sobremi__imagen {
-  background: url("./media/imagenes/pexels-mohamed-abdelghaffar-771742.jpg");
-  background-size: cover;
-  background-position: center; }
-
-/* contacto */
-.contacto__body {
-  background-color: #012e2e; }
-
-.contacto__div {
-  color: #995757; }
-
-.contacto__text-holder {
-  padding: 10px;
-  border: 1px solid #100f0f;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 5px;
-  margin-bottom: 16px; }
-
-.contacto {
-  width: 100%;
-  padding: 40px;
-  padding-left: 70px;
-  padding-right: 70px;
-  height: 500px;
-  margin: 30px;
-  margin-right: 30px;
-  margin-bottom: 70px;
-  background-color: #a09eb4;
-  line-height: 2; }
-
-.contacto__text {
-  color: white; }
-
-/* cv */
-.proyectos__body {
-  background-color: #012e2e; }
-
-.proyectos {
-  margin-top: 60px;
-  padding: 50px 20px;
-  background-color: #a09eb4; }
-
-.proyectos__contenido {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
-  max-width: 1200px;
-  margin: 0 auto; }
-
-.proyectos__titulo {
-  margin-bottom: 40px;
-  text-align: center;
-  font-size: 30px; }
-
-.proyecto {
-  background-color: #9da0be;
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.6); }
-
-.proyecto__enlace {
-  background-color: #22c55e;
-  width: 100%;
-  display: inline-block;
-  text-align: center;
-  border-radius: 10px;
-  color: #e2e8f0;
-  padding: 15px 0;
-  font-weight: bold; }
-
-.proyecto__descripcion {
-  height: 50px;
-  margin-bottom: 0px;
-  margin-top: 30px; }
-
-.proyecto__titulo {
-  margin-bottom: 20px;
-  font-size: 20px; }
-
-.proyecto__encabezado-imagen {
-  width: 100%;
-  border-radius: 10px;
-  margin-bottom: 20px; }
-
-.proyecto__encabezado {
-  position: relative; }
-
-/* habilidades */
-.habilidades__body {
-  background-color: #012e2e; }
-
-.habilidades {
-  margin-top: 60px;
-  padding: 50px 20px;
-  background-color: #a09eb4; }
-
-.habilidades__titulo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem; }
-
-.habilidades__contenido {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 40px; }
-
-.habilidades__contenido-dato {
-  background-color: #9da0be;
-  width: 70%;
-  padding: 40px;
-  padding-left: 70px;
-  padding-right: 70px;
-  height: 475px;
-  margin: 30px;
-  line-height: 2;
-  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.6); }
-
-.habilidades__contenido-titulo {
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-
-.habilidades__contenido-articulo {
-  display: flex;
-  align-items: center;
-  white-space: nowrap; }
-
-.habilidades__contenido-div {
-  width: 200px; }
-
-.habilidades__encabezado-imagen {
-  border-radius: 10px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  width: 25px; }
-
-.habilidades__contenido-nivel {
-  font-family: "OpenSansBold";
-  padding-left: 5px; }
-
-/* transiciones */
-.proyecto__encabezado:hover {
-  transform: scale(1.2); }
-
-/* responsive */
-@media (max-width: 1880px) {
-  /* pie pagina */
-  .pie-pagina {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%; } }
-
-/*cuando es menos de 1373, pasa esto*/
-@media (max-width: 1373px) {
-  /* sobre mi*/
-  .sobremi__dato {
-    word-wrap: break-word;
-    height: 700px; }
-  /* pie pagina */
-  .pie-pagina {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%; }
-  /* cv */
-  .proyectos {
-    margin: 0px;
-    width: 100vw;
-    height: 100vh;
-    overflow: auto; } }
-
-@media (max-width: 1200px) {
-  /* cv */
-  .proyectos__contenido {
-    grid-template-columns: repeat(2, 1fr); }
-  .proyecto__encabezado {
-    margin-left: 50px; }
-  /* sobre mi*/
-  .sobremi__dato {
-    overflow: scroll; }
-  /* habilidades */
-  .habilidades__encabezado-imagen {
-    display: none; } }
-
-@media (max-width: 992px) {
-  /* sobre mi*/
-  .sobremi {
-    grid-template-columns: 1fr; }
-  .sobremi__dato {
-    word-wrap: break-word;
-    height: 475px; }
-  .sobremi__imagen {
-    display: none; }
-  /* habilidades */
-  .habilidades__contenido {
-    grid-template-columns: 1fr; }
-  .habilidades__contenido-dato {
-    height: 250px; }
-  /* cv */
-  .proyectos__contenido {
-    grid-template-columns: 1fr;
-    width: 40%; } }
-
-@media (max-width: 768px) {
-  /* sobre mi*/
-  .sobremi__dato {
-    word-wrap: break-word;
-    height: 600px; }
-  /* encabezado */
-  .encabezado__contenido-menu {
-    display: none; }
-  .encabezado__responsive {
-    display: block;
-    color: #e2e8f0; }
-  /* cv */
-  .proyecto__encabezado:hover {
-    transform: none; }
-  .proyecto__encabezado-imagen {
-    display: block;
-    margin: auto; }
-  .proyecto__encabezado-imagen {
-    display: none; } }
-
-@media (max-width: 576px) {
-  /* sobre mi*/
-  .sobremi__dato {
-    word-wrap: break-word;
-    height: 100%; }
-  /* pie pagina*/
-  .pie-pagina__dato__derechos {
-    display: none; }
-  .pie-pagina__dato {
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    justify-content: center;
-    align-items: center; }
-  /* cv */
-  /* habilidades */
-  .habilidades__contenido-dato {
-    width: 80%; } }
-
 /* general */
 * {
   margin: 0;
@@ -324,33 +31,6 @@ ul {
   src: url("../media/fuentes/Open_Sans/static/OpenSans/OpenSans-SemiBoldItalic.ttf");
   font-style: normal; }
 
-/* footer */
-.pie-pagina {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background: #6cf;
-  background-color: black; }
-
-.pie-pagina__dato {
-  margin: 20px;
-  font-size: medium; }
-
-.pie-pagina__contenido {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.3rem;
-  font-family: "OpenSans"; }
-
-.pie-pagina__contenido, .pie-pagina__contenido a {
-  color: rgba(255, 255, 255, 0.7); }
-
-.pie-pagina__contenido a:hover {
-  color: #fff; }
-
 /* encabezado */
 .encabezado {
   background-color: #343436;
@@ -371,3 +51,193 @@ ul {
         margin: 0 15px; }
   .encabezado__responsive {
     display: none; }
+
+/* footer */
+.pie-pagina {
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background: #6cf;
+  background-color: black;
+  position: absolute; }
+  .pie-pagina__contenido {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.3rem;
+    font-family: "OpenSans";
+    color: rgba(255, 255, 255, 0.7); }
+    .pie-pagina__contenido a {
+      color: rgba(255, 255, 255, 0.7); }
+  .pie-pagina__dato {
+    margin: 20px;
+    font-size: medium; }
+    .pie-pagina__dato__derechos {
+      color: white; }
+
+/* contacto */
+.contacto__body {
+  background-color: #012e2e; }
+
+.contacto {
+  width: 100%;
+  padding: 40px;
+  padding-left: 70px;
+  padding-right: 70px;
+  height: 500px;
+  margin: 30px;
+  margin-right: 30px;
+  margin-bottom: 70px;
+  background-color: #a09eb4;
+  line-height: 2; }
+  .contacto__div {
+    color: #995757; }
+  .contacto__text {
+    color: white; }
+    .contacto__text-holder {
+      padding: 10px;
+      border: 1px solid #100f0f;
+      border-radius: 4px;
+      box-sizing: border-box;
+      margin-top: 5px;
+      margin-bottom: 16px; }
+
+/* cv */
+.proyectos__body {
+  background-color: #012e2e; }
+
+.proyectos {
+  margin-top: 60px;
+  padding: 50px 20px;
+  background-color: #a09eb4; }
+  .proyectos__contenido {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+    max-width: 1200px;
+    margin: 0 auto; }
+  .proyectos__titulo-principal {
+    margin-bottom: 40px;
+    text-align: center;
+    font-size: 30px;
+    color: #995757; }
+
+.proyecto {
+  background-color: #9da0be;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.6); }
+  .proyecto__enlace {
+    background-color: #22c55e;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    border-radius: 10px;
+    color: #e2e8f0;
+    padding: 15px 0;
+    font-weight: bold; }
+  .proyecto__descripcion {
+    height: 50px;
+    margin-bottom: 0px;
+    margin-top: 30px; }
+  .proyecto__titulo {
+    margin-bottom: 20px;
+    font-size: 20px; }
+  .proyecto__encabedazo {
+    position: relative; }
+    .proyecto__encabedazo-imagen {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 20px; }
+
+/* habilidades */
+.habilidades__body {
+  background-color: #012e2e; }
+
+.habilidades {
+  margin-top: 60px;
+  padding: 50px 20px;
+  background-color: #a09eb4; }
+  .habilidades__titulo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    color: #995757; }
+  .habilidades__contenido {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px; }
+    .habilidades__contenido-dato {
+      background-color: #9da0be;
+      width: 70%;
+      padding: 40px;
+      padding-left: 70px;
+      padding-right: 70px;
+      height: 475px;
+      margin: 30px;
+      line-height: 2;
+      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.6); }
+    .habilidades__contenido-titulo {
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .habilidades__contenido-articulo {
+      display: flex;
+      align-items: center;
+      white-space: nowrap; }
+    .habilidades__contenido-div {
+      width: 200px; }
+    .habilidades__contenido-nivel {
+      font-family: "OpenSansBold";
+      padding-left: 5px; }
+  .habilidades__encabezado-imagen {
+    border-radius: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 25px; }
+
+.cover {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  margin: 0px;
+  font-family: "Raleway";
+  text-align: center; }
+  .cover__nombre {
+    font-size: 5rem; }
+  .cover__ocupacion {
+    font-size: 3rem; }
+
+.background-video {
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  opacity: 0.8; }
+
+/* sobre mi */
+.sobremi__body {
+  background-color: #012e2e; }
+
+.sobremi {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px; }
+  .sobremi__dato {
+    background-color: #a09eb4;
+    width: 70%;
+    padding: 40px;
+    padding-left: 70px;
+    padding-right: 70px;
+    height: 475px;
+    margin: 30px;
+    background-color: #a09eb4;
+    line-height: 1.8; }
+  .sobremi__imagen {
+    background: url("../media/imagenes/pexels-mohamed-abdelghaffar-771742.jpg");
+    background-size: cover;
+    background-position: center; }
