--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 
 @import 'componentes/footer';
 
+
 //vistas
 
 @import 'vistas/contacto';
@@ -20,5 +21,4 @@
 
 @import 'vistas/index';
 
-@import 'vistas/sobremi'
-
+@import 'vistas/sobremi';
