--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -9,9 +9,8 @@
      position: absolute;
 
      &__contenido{
-        display:flex;
+        @extend .contenedor;
         flex-wrap:wrap;
-        justify-content:space-between;
         align-items:center;
         font-size:1.3rem;
         font-family: "OpenSans";
@@ -30,4 +29,26 @@
          color: white;
         }
      }
+  }
+
+  @media (max-width: $bpLargest) {
+   /* pie pagina */
+ 
+   .pie-pagina {
+     position: fixed;
+     bottom: 0;
+     left: 0;
+     width: 100%;
+   }
+ }
+
+ @media (max-width: $bpMegaLarge) {
+   /* pie pagina */
+ 
+   .pie-pagina {
+     position: fixed;
+     bottom: 0;
+     left: 0;
+     width: 100%;
+   }
   }
