--- a/scss/componentes/_variables.scss
+++ b/scss/componentes/_variables.scss
@@ -1,8 +1,13 @@
 //colores
 
-$fontLight: #e2e8f0;
+$fontRed: #995757;
+
+$backgroundColor: rgb(1, 46, 46);
 
 //breakpoints
 $bpSmall: 576px;
 $bpMedium: 768px;
 $bpLarge: 992px;
+$bpExtraLarge: 1200px;
+$bpMegaLarge: 1373px;
+$bpLargest: 1880px;
