--- a/scss/vistas/_habilidades.scss
+++ b/scss/vistas/_habilidades.scss
@@ -11,7 +11,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 2rem;
+        font-size: $fontSize;
         color: $fontRed;
       }
 
