--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ ul {
   background-color: #012e2e; }
 
 .contacto {
-  width: 100%;
+  width: 70%;
   padding: 40px;
   padding-left: 70px;
   padding-right: 70px;
@@ -132,6 +132,7 @@ ul {
   margin: 30px;
   margin-right: 30px;
   margin-bottom: 70px;
+  margin-left: 280px;
   background-color: #a09eb4;
   line-height: 2; }
   .contacto__div {
@@ -145,6 +146,19 @@ ul {
       box-sizing: border-box;
       margin-top: 5px;
       margin-bottom: 16px; }
+
+@media (max-width: 1200px) {
+  /* contacto*/
+  .contacto {
+    overflow: hidden;
+    margin-left: 160px; } }
+
+@media (max-width: 768px) {
+  /* contacto*/
+  .contacto {
+    margin-left: 100px; }
+  .contacto__form-boton {
+    text-align: center; } }
 
 /* cv */
 .proyectos__body {
@@ -195,6 +209,9 @@ ul {
 .proyecto__encabezado:hover {
   transform: scale(1.2); }
 
+.btn {
+  width: 100%; }
+
 @media (max-width: 1373px) {
   /* cv */
   .proyectos {
@@ -214,7 +231,13 @@ ul {
   /* cv */
   .proyectos__contenido {
     grid-template-columns: 1fr;
-    width: 40%; } }
+    width: 100%; }
+  .proyecto {
+    text-align: center; }
+  .proyecto__encabezado-imagen {
+    margin-right: 50px; }
+  .btn {
+    width: 50%; } }
 
 @media (max-width: 768px) {
   /* cv */
@@ -240,7 +263,8 @@ ul {
 .habilidades__contenido {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 40px; }
+  gap: 40px;
+  margin-left: 110px; }
   .habilidades__contenido-dato {
     background-color: #9da0be;
     width: 70%;
@@ -269,7 +293,7 @@ ul {
   border-radius: 10px;
   margin-bottom: 20px;
   margin-top: 20px;
-  width: 25px; }
+  width: 35px; }
 
 @media (max-width: 1200px) {
   /* habilidades */
@@ -316,7 +340,8 @@ ul {
 .sobremi {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 40px; }
+  gap: 40px;
+  margin-left: 130px; }
   .sobremi__dato {
     background-color: #a09eb4;
     width: 70%;
@@ -333,11 +358,17 @@ ul {
     background-size: cover;
     background-position: center; }
 
+@media (max-width: 1880px) {
+  /* sobre mi*/
+  .sobremi__dato {
+    word-wrap: break-word;
+    height: 700px; } }
+
 @media (max-width: 1373px) {
   /* sobre mi*/
   .sobremi__dato {
     word-wrap: break-word;
-    height: 500px; } }
+    height: 700px; } }
 
 @media (max-width: 1200px) {
   /* sobre mi*/
@@ -350,7 +381,8 @@ ul {
     grid-template-columns: 1fr; }
   .sobremi__dato {
     word-wrap: break-word;
-    height: 475px; }
+    height: 600px;
+    text-align: center; }
   .sobremi__imagen {
     display: none; } }
 
@@ -363,5 +395,7 @@ ul {
 @media (max-width: 576px) {
   /* sobre mi*/
   .sobremi__dato {
-    word-wrap: break-word;
-    height: 100%; } }
+    word-wrap: break-word; } }
+
+/* probe varias cosas no logro arreglar el scroll del div sobremi dato, 
+tampoco entiendo como no tendria scroll si el texto termina estirandose hacia abajo*/
