--- a/css/style.css
+++ b/css/style.css
@@ -390,12 +390,13 @@ ul {
   /* sobre mi*/
   .sobremi__dato {
     word-wrap: break-word;
-    height: 600px; } }
+    width: 70%; }
+  .sobremi__dato-p2 {
+    display: none; } }
 
 @media (max-width: 576px) {
   /* sobre mi*/
   .sobremi__dato {
-    word-wrap: break-word; } }
-
-/* probe varias cosas no logro arreglar el scroll del div sobremi dato, 
-tampoco entiendo como no tendria scroll si el texto termina estirandose hacia abajo*/
+    word-wrap: break-word; }
+  .sobremi__dato-p1 {
+    display: none; } }
